feat: Updated notes.

--- a/books/mastering-the-market-cycle/04-05-2025.md
+++ b/books/mastering-the-market-cycle/04-05-2025.md
@@ -16,4 +16,30 @@
   - Assess how the current market price compares with the asset's intrinsic value\
      past prices for the asset, the prices of other assets, and \
     "theoretically fair" prices of the assets
--
+- Portfolio optimization is a balanced aggressiveness/defensivess strategy
+  - Should be adjusted over time in reponse to changes in the state\
+    of the investment environment
+  - Be aggressive when value is cheap. Be defensive when value is expensive
+
+#### Think in terms of "Tendencies"
+
+- Things that might happen or should happen
+- How likely they are to happen
+
+##### Risk
+
+- Likelihood of permanent capital loss
+- Opportunity risk - missing out on potential gains
+- Knowledge advantage - knows more than others about the future tendencies
+
+##### Questions on Market Cycles
+
+1. Are we close to the beginning of an upswing, or in the late stages?
+2. If a particular cycle has been rising for a while, has it gone so far\
+   that we're now in dangerous territory?
+3. Does investors' behavior suggest they're being driven by greed or by fear?
+4. Do they seem appropriately risk-averse or foolishly risk-tolerant?
+5. Is the market overheated (and overpriced), or is it frigid (and thus \
+   cheap) because of what's been going on cyclically?
+6. Take together, does our current position in the cycle imply that\
+   we should emphasize defensiveness or aggressiveness?
