feat: Adding ZTA Notes.

--- a/publications/NIST-Zero-Trust-Architecture/04-08-2025.md
+++ b/publications/NIST-Zero-Trust-Architecture/04-08-2025.md
@@ -65,3 +65,70 @@ Requestor <-- Untrusted Zone --> Policy Decision/Enforcement Point (PDP/PEP) <--
    have a consistent security policy and posture
 
 ### Logical Components of Zero Trust Architecture
+
+#### Components
+
+- The Policy Decision Point (PDP): The policy engine and policy administrator
+- ZTA logical components use a seperate control plane for communication
+- Applicaiton data is communicated on a data plane
+
+1. Policy Engine: makes the ultimate decision to grant access to a resource\
+   for a given subject. Policy engine makes and logs decisions and Policy\
+   administrator executes the decision
+2. Policy administrator: Establishes or shuts down the communication path\
+   between a subject and a resource
+3. Policy enforcement point (PEP): responsible for enabling, monitoring\
+   and eventually terminating connections between a subject and an enterprise\
+   resource.
+4. Continous diagnostics & mitigation (CDM) system: gathers info about the\
+   enterprise asset's current state and applies updates to configs and software\
+   components.
+5. Industry compliance system: ensures that the enterprise remains compliant\
+   with any regulatory regime that it may fall under.
+6. Threat intelligence feed(s): provides info from internal or external sources\
+   that help the policy engine make access decisions.
+7. Network and system activity logs: enterprise aggregates asset logs, network\
+   traffic, resource access actions, and other events that provide real-time feedback\
+   on the security posture of enterprise information systems
+8. Data access policies: attributes, rules, and policies about access to resources
+9. Enterprise public key infrastructure (PKI): responsible for generating and logging\
+   certificates issued by the enterprise to resources, subjects, services and applications.
+10. ID management system: responsible for creating, storing and managing enterprise\
+    user accounts and identity records (lightweight directory access protocol \
+    - LDAP server)
+11. Security information and event management (SIEM) system: Collects security-centric\
+    information for later analysis.
+
+#### Variations of Zero Trust Architecture Approaches
+
+##### ZTA Using Enhanced Identity Governance
+
+- Uses identity of actors as the key components of policy creation
+- Primary requirement for resource access is based on the access privileges granted\
+  to the given subject
+- often employed using an open network model or enterprise network with visitor access
+- work well with cloud-based applications
+
+##### ZTA Using Micro-Segmentation
+
+- Places individual or groups of resources on unique network segment protected by\
+  a gateway security component
+- Requires an identity governance program but relies on the gateway commponents to\
+  act as the PEP that shields resouces from unauthorized access and/or discovery
+- the PEP components are managed and should be able to react and reconfigure as \
+  needed to respond to threats or change in the workflows
+- Very poor choice because of administration costs and adaption optimization
+
+##### ZTA Using Network Infrastructure and Software Defined Perimeters
+
+- Uses an overlay network (typically Layer 7 but can be set at lower levels)
+- PA acts as the network controller taht sets up and reconfigures the network\
+  based on the decisions made by the PE
+- Most common deployment model is the agent/gateway
+- agent and resouce gateway establish a secure channel used for communication
+
+#### Deployed Variations of the Abstract Architecture
+
+##### Device Agent/Gateway-Based Deployment
+
+-
